--- a/src/style.scss
+++ b/src/style.scss
@@ -15,7 +15,7 @@ $mono: 'IBM Plex Mono';
 
 body {
     font-family: 'Titillium Web', sans-serif;
-    font-size: 1vw;
+    font-size: 1.1111111111111112vw;
     background-color: $bg-clr;
     max-width: 100%;
     overflow-x: hidden;
@@ -23,9 +23,8 @@ body {
 
 p {
     font-family: $mono, monospace;
-    font-size: .85em;
+    font-size: 1em;
     font-weight: 500;
-    max-width: 47ch;
     line-height: 1.5;
 }
 
@@ -41,12 +40,13 @@ nav {
 
     a {
         font-family: $mono;
-        font-size: .85em;
+        font-size: 1em;
         font-weight: 500;
         color: black;
         text-decoration: none;
         padding: 0 .25em;
         margin: 0 .75em;
+        transition: color 0.25s cubic-bezier(0.25, 1, 0.5, 1);
     }
 
     a:hover {
@@ -58,7 +58,7 @@ nav {
 h1 {
     color: black;
     font-weight: 600;
-    font-size: 4em;
+    font-size: 4.25em;
     line-height: 1.2;
 }
 
@@ -72,6 +72,35 @@ section {
 }
 
 /* Classes */
+.right-fixed-email {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    bottom: 0;
+    right: 3.5em;
+    z-index: 3;
+    // border: 1px solid red;
+
+    a {
+        color:#9C9D9E;
+        writing-mode: vertical-rl;
+        text-orientation: mixed;
+        font-family: $mono;
+        font-size: .85em;
+        letter-spacing: .4;
+        position: relative;
+        left: .125em;
+        cursor: pointer;
+        transition: transform 0.25s cubic-bezier(0.25, 1, 0.5, 1);
+    }
+
+    a:hover {
+        color: $main-clr;
+        transform: translateY(-.25em);
+    }
+}
+
 .typed-text {
     color: $main-clr;
 }
@@ -90,7 +119,7 @@ section {
   }
 
 .nav__container {
-    max-width: 70em;
+    max-width: 77em;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
@@ -100,13 +129,14 @@ section {
 
 .btn {
     padding: .385em 1.35em;
-    font-size: .85em;
+    font-size: 1em;
     font-weight: 500;
     font-family: $mono;
     background-color: $alt-clr;
     border: 2px solid black;
     border-radius: .25em;
     cursor: pointer;
+    transition: background-color 0.25s cubic-bezier(0.25, 1, 0.5, 1);
 }
 
 .btn:hover {
@@ -122,19 +152,19 @@ section {
 .color-gradient-2 {
     position: absolute;
     top: 22em;
-    width: 40em;
+    width: 45em;
 }
 
 .orbit-container-1 {
     position: absolute;
-    right: 19em;
-    top: -18em;
+    right: 20em;
+    top: -16em;
 }
 
 .orbit-container-2 {
     position: absolute;
     top: 40em;
-    left: -25em;
+    left: -30em;
 }
 
 .inner-orbit {
@@ -174,7 +204,7 @@ section {
   }
 
 .btn-wrap {
-    padding-top: 1.2em;
+    padding-top: 1.75em;
 }
 
 .logo {
@@ -187,14 +217,14 @@ section {
 
 .container {
     position: relative;
-    max-width: 70em;
+    max-width: 68.75em;
     margin: 0 auto;
     z-index: 1;
 }
 
 .illustration {
-    width: 24em;
-    // margin-left: 11em;
+    width: 25em;
+    margin-left: 7em;
 }
 
 .style-line {
@@ -202,6 +232,13 @@ section {
     width: 12em;
     background-color:#9C9D9E;
     margin-left: 1.5em;
+}
+
+.short-line {
+    height: 6em;
+    width: 2px;
+    background-color:#bababa;
+    margin-top: 1.25em;
 }
 
 .heading-wrap {
@@ -224,13 +261,47 @@ section {
     margin-bottom: .5em;
 }
 
+.headshot {
+    width: 17em;
+    border-radius: .25em;
+    margin-left: 5em;
+    position: relative;
+    top: 3em;
+    z-index: 2;
+}
+
+.headshot__square {
+    width: 17em;
+    position: absolute;
+    top: 4em;
+    right: -1em;
+}
+
+.headshot__container {
+    position: relative;
+}
+
 /* Global Modifiers */
 .is--btm-margin {
-    margin-bottom: .25em;
+    margin-bottom: .35em;
 }
 
 .is--split {
     display: flex;
-    justify-content: space-around;
+    justify-content: start;
     align-items: center;
+}
+
+.is--47ch {
+    max-width: 47ch;
+}
+
+.is--54ch {
+    max-width: 54ch;
+}
+
+@media all and (max-width: 1080px) {
+    body {
+        font: .9888em;
+    }
 }
