--- a/src/style.scss
+++ b/src/style.scss
@@ -80,7 +80,6 @@ section {
     bottom: 0;
     right: 3.5em;
     z-index: 3;
-    // border: 1px solid red;
 
     a {
         color:#9C9D9E;
@@ -89,6 +88,7 @@ section {
         font-family: $mono;
         font-size: .85em;
         letter-spacing: .4;
+        text-decoration: none;
         position: relative;
         left: .125em;
         cursor: pointer;
@@ -99,6 +99,46 @@ section {
         color: $main-clr;
         transform: translateY(-.25em);
     }
+}
+
+.left-fixed-icons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    bottom: 0;
+    left: 3.5em;
+    z-index: 3;
+
+    li {
+        width: 1.5em;
+        height: 1.5em;
+        background-size: cover;
+        display: inline-block;
+        transition: transform 0.25s cubic-bezier(0.25, 1, 0.5, 1);
+    }
+
+    li:hover {
+        transform: translateY(-.25em);
+    }
+
+    .github {
+        background-image: url(images/github-icon.svg);
+        transition: all 0.25s cubic-bezier(0.25, 1, 0.5, 1);
+    }
+
+    .github:hover {
+        background-image: url(images/github-icon-clr.svg);
+    }
+
+    .linkedin {
+        background-image: url(images/linkedin-icon.svg);
+        transition: all 0.25s cubic-bezier(0.25, 1, 0.5, 1);
+    }
+
+    .linkedin:hover {
+        background-image: url(images/linkedin-icon-clr.svg);
+    }    
 }
 
 .typed-text {
@@ -119,7 +159,7 @@ section {
   }
 
 .nav__container {
-    max-width: 77em;
+    max-width: 80%;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
@@ -235,7 +275,7 @@ section {
 }
 
 .short-line {
-    height: 6em;
+    height: 5em;
     width: 2px;
     background-color:#bababa;
     margin-top: 1.25em;
@@ -300,8 +340,15 @@ section {
     max-width: 54ch;
 }
 
-@media all and (max-width: 1080px) {
-    body {
-        font: .9888em;
-    }
+.is--icon-btm-margin {
+    margin-bottom: 1em;
+}
+
+.is--clr-bg {
+    margin: 4em 0 0 0;
+    background-color: $alt-clr;
+}
+
+@media only screen and (min-width: 1580px) {
+    body {font-size: 1.1em;}
 }
