--- a/src/style.scss
+++ b/src/style.scss
@@ -321,6 +321,20 @@ section {
     position: relative;
 }
 
+.project__wrap {
+    display: flex;
+    justify-content: space-between;
+}
+
+.project__thumbnail-wrap {
+    position: relative;
+}
+
+.thumbnail-bg-square {
+    position: absolute;
+    left: 0;
+}
+
 /* Global Modifiers */
 .is--btm-margin {
     margin-bottom: .35em;
@@ -347,6 +361,11 @@ section {
 .is--clr-bg {
     margin: 4em 0 0 0;
     background-color: $alt-clr;
+}
+
+.is--column-layout {
+    display: flex;
+    flex-direction: column;
 }
 
 @media only screen and (min-width: 1580px) {
