--- a/src/style.scss
+++ b/src/style.scss
@@ -13,6 +13,10 @@ $mono: 'IBM Plex Mono';
     margin: 0;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Titillium Web', sans-serif;
     font-size: 1.1111111111111112vw;
@@ -76,6 +80,17 @@ section {
     padding: 4em 0;
 }
 
+footer {
+    background: $main-clr;
+    color: white;
+    padding: 2em 0;
+
+    p {
+        font-weight: 400;
+        letter-spacing: 1px;
+    }
+}
+
 form {
     margin: 2em 0 0 -.45em;
 
@@ -118,6 +133,19 @@ select {
     margin-bottom: 1em;
     -webkit-appearance: none;
     appearance: none;
+}
+
+body::-webkit-scrollbar {
+    width: .85em;
+}
+   
+body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+   
+body::-webkit-scrollbar-thumb {
+    background-color: #c1c1c195;
+    border-radius: .25em;
 }
 
 /* Classes */
@@ -230,6 +258,8 @@ select {
 
 .btn:hover {
     background-color: $main-clr;
+    text-decoration: none;
+    color: #000000;
 }
 
 .btn-alt {
@@ -339,6 +369,18 @@ select {
     margin-left: 1.5em;
 }
 
+.style-line-alt {
+    height: 1px;
+    width: 100%;
+    background-color:#9C9D9E;
+}
+
+.style-line-prpl {
+    height: 2px;
+    width: 100%;
+    background-color: $main-clr;
+}
+
 .short-line {
     height: 5em;
     width: 2px;
@@ -349,6 +391,10 @@ select {
 .heading-wrap {
     display: flex;
     align-items: center;
+}
+
+.heading-wrap-alt {
+    display: inline-block;
 }
 
 .tag__wrap {
@@ -468,15 +514,109 @@ select {
     top: 11.85em;
 }
 
+.contact__info-wrap {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 4.5em;
+}
+
+.contact__item {
+    display: flex;
+    align-items: center;
+
+    img {
+        width: 1.75em;
+        margin-right: .8em;
+    }
+
+    p {
+        font-size: 1.5em;
+        font-weight: 600;
+        font-family: 'Titillium Web';
+    }
+
+    a {
+        text-decoration: none;
+        color: black;
+        transition: color 0.25s cubic-bezier(0.25, 1, 0.5, 1);
+    }
+
+    a:hover {
+        color: $main-clr;
+    }
+}
+
+.project__page-image-wrap {
+    position: relative;
+
+    img {
+        position: relative;
+        width: 35em;
+        border-radius: .25em;
+        border: 1px solid #ffffff66;
+        z-index: 2;
+    }
+
+    div {
+        width: 100%;
+        height: 98%;
+        border: .25em solid $main-clr;
+        border-radius: .25em;
+        position: absolute;
+        top: 1em;
+        right: 1em;
+    }
+}
+
+.link-wrap {
+    margin-bottom: 1.5em;
+    a {
+        color: $main-clr;
+        font-weight: 600;
+        text-decoration: none;
+    }
+}
+
+.return-link {
+    color: $main-clr;
+    font-weight: 600;
+    text-decoration: none;
+}
+
+.project__page-top {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 6em;
+}
+
+.project__page-content {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    margin-bottom: 5em;
+}
+
 /* Global Modifiers */
 .is--btm-margin {
     margin-bottom: .35em;
+}
+
+.is--100-width {
+    width: 100%;
+}
+
+.is--prpl-hover:hover {
+    color: $main-clr !important;
 }
 
 .is--split {
     display: flex;
     justify-content: start;
     align-items: center;
+}
+
+.is--flex-end {
+    align-items: end;
 }
 
 .is--47ch {
@@ -499,6 +639,18 @@ select {
 .is--column-layout {
     display: flex;
     flex-direction: column;
+}
+
+.is--center-align {
+    text-align: center;
+}
+
+.is--right-align {
+    text-align: end;
+}
+
+.is--btm-pad {
+    padding-bottom: 6em;
 }
 
 @media only screen and (min-width: 1580px) {
