--- a/root/css/style.scss
+++ b/root/css/style.scss
@@ -15,6 +15,7 @@ $mono: 'IBM Plex Mono';
 
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 body {
@@ -23,6 +24,7 @@ body {
     background-color: $bg-clr;
     max-width: 100%;
     overflow-x: hidden;
+    position: relative
 }
 
 p {
@@ -246,6 +248,7 @@ body::-webkit-scrollbar-thumb {
 
 .btn {
     padding: .385em 1.35em;
+    color: #000000;
     font-size: 1em;
     font-weight: 500;
     font-family: $mono;
