--- a/root/css/style.css
+++ b/root/css/style.css
@@ -123,9 +123,6 @@ select {
   text-align: center;
   border-bottom: 2px solid black;
   margin-bottom: 1em;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-       appearance: none;
 }
 
 body::-webkit-scrollbar {
@@ -190,18 +187,19 @@ body::-webkit-scrollbar-thumb {
   transform: translateY(-0.25em);
 }
 .left-fixed-icons .github {
-  background-image: url(images/github-icon.svg);
+  background-image: url(../images/github-icon.svg);
   transition: all 0.25s cubic-bezier(0.25, 1, 0.5, 1);
+  z-index: 3;
 }
 .left-fixed-icons .github:hover {
-  background-image: url(images/github-icon-clr.svg);
+  background-image: url(../images/github-icon-clr.svg);
 }
 .left-fixed-icons .linkedin {
-  background-image: url(images/linkedin-icon.svg);
+  background-image: url(../images/linkedin-icon.svg);
   transition: all 0.25s cubic-bezier(0.25, 1, 0.5, 1);
 }
 .left-fixed-icons .linkedin:hover {
-  background-image: url(images/linkedin-icon-clr.svg);
+  background-image: url(../images/linkedin-icon-clr.svg);
 }
 
 .typed-text {
@@ -516,13 +514,6 @@ body::-webkit-scrollbar-thumb {
   margin: 0.5em 0;
 }
 
-.dd-arrow {
-  position: absolute;
-  width: 1.15em;
-  right: 9.75em;
-  top: 11.85em;
-}
-
 .contact__info-wrap {
   display: flex;
   justify-content: space-between;
@@ -599,6 +590,10 @@ body::-webkit-scrollbar-thumb {
   margin-bottom: 5em;
 }
 
+.mobile-nav {
+  display: none;
+}
+
 /* Global Modifiers */
 .is--btm-margin {
   margin-bottom: 0.35em;
@@ -659,5 +654,232 @@ body::-webkit-scrollbar-thumb {
 @media only screen and (min-width: 1580px) {
   body {
     font-size: 1.1em;
+  }
+}
+@media screen and (max-width: 991px) {
+  body {
+    font-size: 12px;
+  }
+
+  .nav__container {
+    max-width: 90%;
+  }
+
+  .container {
+    max-width: 85%;
+  }
+}
+@media screen and (max-width: 768px) {
+  h1 {
+    font-size: 3em;
+  }
+
+  h2 {
+    font-size: 2.25em;
+  }
+
+  h3 {
+    font-size: 1.75em;
+  }
+
+  p {
+    font-size: 1.15em;
+  }
+
+  label {
+    font-size: 1.5em;
+  }
+
+  input {
+    font-size: 1.5em;
+    text-align: left;
+    margin-bottom: 1em;
+  }
+
+  select {
+    font-size: 1.5em;
+    text-align: left;
+  }
+
+  nav a {
+    font-size: 1.15em;
+  }
+
+  .btn {
+    border: 1px solid black;
+    font-size: 1.15em;
+  }
+
+  .right-fixed-email {
+    display: none;
+  }
+
+  .left-fixed-icons {
+    display: none;
+  }
+
+  .orbit-container-1, .orbit-container-2 {
+    display: none;
+  }
+
+  .color-gradient-1, .color-gradient-2 {
+    display: none;
+  }
+
+  .project__wrap {
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 2em 0;
+  }
+
+  .project__thumbnail-wrap {
+    display: none;
+  }
+
+  .tag__wrap {
+    width: 100%;
+  }
+
+  .illustration {
+    display: none;
+  }
+
+  .is--split {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .contact__info-wrap {
+    flex-direction: column;
+  }
+
+  .contact__item {
+    margin-bottom: 1em;
+  }
+
+  .project__page-top {
+    flex-direction: column;
+  }
+
+  .project__page-image-wrap {
+    margin-top: 2em;
+  }
+  .project__page-image-wrap div {
+    display: none;
+  }
+  .project__page-image-wrap img {
+    width: 90%;
+  }
+
+  .project__page-content {
+    align-items: flex-start;
+  }
+}
+@media screen and (max-width: 536px) {
+  nav {
+    width: 95%;
+    margin: 0 auto;
+    top: 1em;
+    border-radius: 1em;
+    border: 1px solid #E6E6E6;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.17);
+  }
+  nav .btn {
+    display: none;
+  }
+
+  .nav__link {
+    display: none;
+  }
+
+  .mobile-menu {
+    position: relative;
+    width: 2.25em;
+    height: 2em;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end;
+  }
+
+  .m-line-1 {
+    height: 3px;
+    border-radius: 22%;
+    width: 100%;
+    background-color: #779BE7;
+  }
+
+  .m-line-2 {
+    height: 3px;
+    width: 60%;
+    background-color: #779BE7;
+  }
+
+  .m-line-3 {
+    height: 3px;
+    width: 100%;
+    background-color: #779BE7;
+  }
+
+  .mobile-nav {
+    position: fixed;
+    inset: 0 0 0 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 2;
+    -webkit-backdrop-filter: blur(10px);
+            backdrop-filter: blur(10px);
+    display: flex;
+    justify-content: end;
+  }
+  .mobile-nav ul {
+    width: 60%;
+    height: 100%;
+    background-color: whitesmoke;
+    list-style: none;
+    box-shadow: -4px 0px 18px rgba(0, 0, 0, 0.341);
+    padding: 8em 2em;
+  }
+  .mobile-nav li {
+    margin: 5em 0;
+    text-align: center;
+  }
+  .mobile-nav a {
+    font-family: "IBM Plex Mono";
+    font-size: 1.5em;
+    font-weight: 500;
+    color: black;
+    text-decoration: none;
+    padding: 0 0.25em;
+    margin: 0 0.75em;
+    transition: color 0.25s cubic-bezier(0.25, 1, 0.5, 1);
+  }
+  .mobile-nav a:hover {
+    color: #779BE7;
+    text-decoration: underline;
+  }
+  .mobile-nav .btn {
+    padding: 0.385em 1.35em;
+    color: #000000;
+    font-size: 1.5em;
+    font-weight: 500;
+    font-family: "IBM Plex Mono";
+    background-color: #C0C8FC;
+    border: 2px solid black;
+    border-radius: 0.25em;
+    cursor: pointer;
+    transition: background-color 0.25s cubic-bezier(0.25, 1, 0.5, 1);
+  }
+
+  .menu-open {
+    background-color: transparent;
+    -webkit-backdrop-filter: none;
+            backdrop-filter: none;
+    box-shadow: none;
+    border: none;
+  }
+
+  .menu-hide {
+    display: none;
   }
 }/*# sourceMappingURL=style.css.map */
