--- a/root/css/style.scss
+++ b/root/css/style.scss
@@ -931,4 +931,9 @@ body::-webkit-scrollbar-thumb {
     .return-link {
         font-size: 1.15em;
     }
+
+    .btn-alt {
+        border: 1px solid black;
+        font-size: 1.15em;
+    }
 }
